✨ Implemented the custom middlewares

--- a/Views/404.html
+++ b/Views/404.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Index</title>
+    <title>Error</title>
   </head>
   <body>
-    <div>
-      <h1>Hello World!</h1>
-    </div>
+    <h1>ERROR: 404</h1>
   </body>
 </html>
