--- a/Views/new-page.html
+++ b/Views/new-page.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Index</title>
+    <title>New Page</title>
   </head>
   <body>
-    <div>
-      <h1>Hello World!</h1>
-    </div>
+    <h1>New Page</h1>
+    <img src="/img/bart.jpg" alt="bart" />
   </body>
 </html>
